--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Spring Framework Guru Courses</title>
+    <meta charset="UTF-8"/>
+    <title th:text="#{index.page.title}">Page Title</title>
 
-    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
+    <link href="../static/css/bootstrap-3.3.4-dist/css/bootstrap.min.css" rel="stylesheet" media="screen"
+          th:href="@{/css/bootstrap-3.3.4-dist/css/bootstrap.min.css}"/>
 
-    <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"></script>
+    <script src="../static/js/jquery-2.1.4.min.js"
+            th:src="@{/js/jquery-2.1.4.min.js}"></script>
 
-    <style>
+    <link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>
+
+    <style th:remove="all">
         .jumbotron {
-            background: url('https://d2vvqscadf4c1f.cloudfront.net/rGIBmJUAT46UuLPwXo3K_Fedora_Core_Ultimate2.jpg') no-repeat center center;
+            background: url('../static/images/SpringCoreJumbotron.jpg') no-repeat center center;
             height: 350px;
             color: white;
             text-shadow: #444 0 1px 1px;
@@ -131,14 +135,14 @@
 <div class="jumbotron">
     <div class="container">
         <h1>Spring Framework Guru</h1>
-        <p class="lead">Online Courses for Spring Framework</p>
+        <p class="lead" th:text="#{index.courses.tagline}">Tag line</p>
     </div>
 </div>
 
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h1>Spring Framework Guru Courses</h1>
+            <h1 th:text="#{index.courses.headline}">Courses Headline</h1>
         </div>
     </div>
 
@@ -150,8 +154,9 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="https://process.fs.teachablecdn.com/ADNupMnWyR7kCWRvm76Laz/resize=width:705/https://d2vvqscadf4c1f.cloudfront.net/scgeIJ9wRGGNWvK0jAld_ThumbFREE_01.png"
-                                     class="course-box-image">
+                                     src="../static/images/SpringIntroThumb.png"
+                                     th:src="@{images/SpringIntroThumb.png}"
+                                     class="course-box-image"/>
                             </div>
                             <div class="course-listing-title">
                                 Introduction to Spring
@@ -165,8 +170,9 @@
                 <div class="row course-listing-extra-info col-xs-12">
                     <div class="col-xs-8">
                         <img align="left" alt="John Thompson"
-                             src="https://process.fs.teachablecdn.com/ADNupMnWyR7kCWRvm76Laz/resize=width:30,height:30/https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
-                             class="img-circle">
+                             src="../static/images/instructor_jt.jpg"
+                             th:src="@{images/instructor_jt.jpg}"
+                             class="img-circle"/>
                         <div class="small course-author-name">
                             John Thompson
                         </div>
@@ -186,8 +192,9 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="https://process.fs.teachablecdn.com/ADNupMnWyR7kCWRvm76Laz/resize=width:705/https://d2vvqscadf4c1f.cloudfront.net/YnsFJMclS5aYmtiAMSX0_ThumbSPRINcore.png"
-                                     class="course-box-image">
+                                     src="../static/images/SpringCoreThumb.png"
+                                     th:src="@{images/SpringCoreThumb.png}"
+                                     class="course-box-image"/>
                             </div>
                             <div class="course-listing-title">
                                 Spring Core
@@ -201,8 +208,9 @@
                 <div class="row course-listing-extra-info col-xs-12">
                     <div class="col-xs-8">
                         <img align="left" alt="John Thompson"
-                             src="https://process.fs.teachablecdn.com/ADNupMnWyR7kCWRvm76Laz/resize=width:30,height:30/https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
-                             class="img-circle">
+                             src="../static/images/instructor_jt.jpg"
+                             th:src="@{images/instructor_jt.jpg}"
+                             class="img-circle"/>
                         <div class="small course-author-name">
                             John Thompson
                         </div>
@@ -222,8 +230,9 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="https://process.fs.teachablecdn.com/ADNupMnWyR7kCWRvm76Laz/resize=width:705/https://d2vvqscadf4c1f.cloudfront.net/fMahox0zTOW4gYkMMjmN_ThumbSPRINcoreAdv.png"
-                                     class="course-box-image">
+                                     src="../static/images/SpringCoreAdvancedThumb.png"
+                                     th:src="@{images/SpringCoreAdvancedThumb.png}"
+                                     class="course-box-image"/>
                             </div>
                             <div class="course-listing-title">
                                 Spring Core Advanced
@@ -237,8 +246,9 @@
                 <div class="row course-listing-extra-info col-xs-12">
                     <div class="col-xs-8">
                         <img align="left" alt="John Thompson"
-                             src="https://process.fs.teachablecdn.com/ADNupMnWyR7kCWRvm76Laz/resize=width:30,height:30/https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
-                             class="img-circle">
+                             src="../static/images/instructor_jt.jpg"
+                             th:src="@{images/instructor_jt.jpg}"
+                             class="img-circle"/>
                         <div class="small course-author-name">
                             John Thompson
                         </div>
@@ -261,8 +271,9 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="https://process.fs.teachablecdn.com/ADNupMnWyR7kCWRvm76Laz/resize=width:705/https://www.filepicker.io/api/file/HnVU5adRZxeFT99yybqw"
-                                     class="course-box-image">
+                                     src="../static/images/SpringCoreDevOpsThumb.png"
+                                     th:src="@{images/SpringCoreDevOpsThumb.png}"
+                                     class="course-box-image"/>
                             </div>
                             <div class="course-listing-title">
                                 Spring Core Dev Ops
@@ -276,8 +287,9 @@
                 <div class="row course-listing-extra-info col-xs-12">
                     <div class="col-xs-8">
                         <img align="left" alt="John Thompson"
-                             src="https://process.fs.teachablecdn.com/ADNupMnWyR7kCWRvm76Laz/resize=width:30,height:30/https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
-                             class="img-circle">
+                             src="../static/images/instructor_jt.jpg"
+                             th:src="@{images/instructor_jt.jpg}"
+                             class="img-circle"/>
                         <div class="small course-author-name">
                             John Thompson
                         </div>
@@ -298,8 +310,9 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="https://process.fs.teachablecdn.com/ADNupMnWyR7kCWRvm76Laz/resize=width:705/https://d2vvqscadf4c1f.cloudfront.net/DkBQKd4WQxWTCLnFwJCR_ThumbSPRINcoreUltimate.png"
-                                     class="course-box-image">
+                                     src="../static/images/SpringCoreUltimateThumb.png"
+                                     th:src="@{images/SpringCoreUltimateThumb.png}"
+                                     class="course-box-image"/>
                             </div>
                             <div class="course-listing-title">
                                 Spring Core Ultimate
@@ -331,8 +344,9 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="https://process.fs.teachablecdn.com/ADNupMnWyR7kCWRvm76Laz/resize=width:705/https://d2vvqscadf4c1f.cloudfront.net/J8mqML4lQRmUmM4gdCW0_Thumb_Thymeleaf.png"
-                                     class="course-box-image">
+                                     src="../static/images/ThymeleafThumb.png"
+                                     th:src="@{images/ThymeleafThumb.png}"
+                                     class="course-box-image"/>
                             </div>
                             <div class="course-listing-title">
                                 Thymeleaf
@@ -346,8 +360,9 @@
                 <div class="row course-listing-extra-info col-xs-12">
                     <div class="col-xs-8">
                         <img align="left" alt="John Thompson"
-                             src="https://process.fs.teachablecdn.com/ADNupMnWyR7kCWRvm76Laz/resize=width:30,height:30/https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
-                             class="img-circle">
+                             src="../static/images/instructor_jt.jpg"
+                             th:src="@{images/instructor_jt.jpg}"
+                             class="img-circle"/>
                         <div class="small course-author-name">
                             John Thompson
                         </div>
