--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -19,36 +19,29 @@
             color: white;
             text-shadow: #444 0 1px 1px;
         }
-
         body {
             color: #2b3636;
             font-family: "Proxima";
         }
-
         body {
             color: #333;
             font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
             font-size: 14px;
             line-height: 1.42857;
         }
-
         .row {
             margin-left: -15px;
             margin-right: -15px;
         }
-
         *::before, *::after {
             box-sizing: border-box;
         }
-
         *::before, *::after {
             box-sizing: border-box;
         }
-
         .view-directory .course-listing {
             background-color: rgba(255, 255, 255, 0.7);
         }
-
         .course-listing {
             background-color: #f7f7f7;
             border: 1px solid #f1f3f0;
@@ -59,16 +52,13 @@
             margin-bottom: 50px;
             padding: 0;
         }
-
         * {
             box-sizing: border-box;
         }
-
         .course-listing .course-box-image-container {
             max-height: 208px;
             overflow: hidden;
         }
-
         .course-listing .course-box-image-container .course-box-image {
             border-bottom: 1px solid #ededed;
             border-top-left-radius: 9px;
@@ -77,15 +67,12 @@
             margin: auto;
             width: 100%;
         }
-
         img {
             vertical-align: middle;
         }
-
         img {
             border: 0 none;
         }
-
         .course-listing .course-listing-title {
             color: #6cb44a;
             font-size: 18px;
@@ -95,7 +82,6 @@
             overflow: hidden;
             padding: 16px 16px 4px;
         }
-
         .course-listing .course-listing-subtitle {
             color: #586f6f;
             font-size: 14px;
@@ -104,7 +90,6 @@
             overflow: hidden;
             padding: 5px 16px;
         }
-
         .course-listing .course-listing-extra-info .course-price {
             color: #6eae50 !important;
             font-size: 15px;
@@ -113,7 +98,6 @@
             padding-right: 10px;
             text-align: right;
         }
-
         .course-listing .course-listing-extra-info .course-author-name {
             font-size: 15px;
             font-weight: 200;
@@ -122,7 +106,6 @@
             overflow: hidden;
             padding-left: 5px;
         }
-
         .course-listing .course-listing-extra-info .course-bundle {
             font-size: 15px;
             font-weight: 200;
@@ -133,31 +116,51 @@
 </head>
 <body>
 
-<div class="jumbotron">
+<div class="jumbotron" th:replace="fragments/jumbotron :: jumbotron">
     <div class="container">
-        <h1 th:text="#{index.courses.tagline}">Tag line</h1>
-        <p class="lead" th:text="#{index.courses.headline}">Online Courses for Spring Framework</p>
+        <h1>Spring Framework Guru</h1>
+        <p class="lead" th:text="#{index.courses.tagline}">Online Courses for Spring Framework</p>
     </div>
 </div>
 
-<div class="container">
+<div class="container" style="height: 100vh;">
     <div class="row">
         <div class="col-md-12">
-            <h1>Spring Framework Guru - Course Name</h1>
+            <h1 th:text="${product.courseName}">Spring Framework Guru - Course Name</h1>
         </div>
     </div>
-    <div class="row">
+    <div class="row course-listing">
         <div class="col-md-6">
-
-            <img src="../static/images/SpringIntroThumb.png"
-                 th:src="@{/images/SpringIntroThumb.png}"
-                 class="center-block"/>
+            <div class="row">
+                <div class="col-md-12">
+                    <img src="../static/images/SpringIntroThumb.png"
+                         th:src="@{'/images/'+${product.imageUrl}}"
+                         class="center-block"/>
+                </div>
+            </div>
+            <div class="row course-listing-extra-info col-xs-12">
+                <div class="col-xs-8">
+                    <img align="left" alt="John Thompson"
+                         src="../static/images/instructor_jt.jpg"
+                         th:src="@{'/images/'+${product.author.image}}"
+                         class="img-circle"/>
+                    <div class="small course-author-name" th:text="${(product.author.firstName)
+                                                          + ' ' + (product.author.lastName)}">
+                        Author Name
+                    </div>
+                </div>
+                <div class="col-xs-4">
+                    <div class="small course-price" th:text="${product.price >0 ? '$' + product.price : 'FREE'}">
+                        $PRICE
+                    </div>
+                </div>
+            </div>
 
         </div>
         <div class="col-md-6">
             <div>
-                <h2>Course Title</h2>
-                <p>Adipiscing magna vestibulum fringilla tristique ad a primis ante mi inceptos condimentum curabitur
+                <h2 th:text="${product.courseSubtitle}">Course Title</h2>
+                <p th:text="${product.courseDescription}">Adipiscing magna vestibulum fringilla tristique ad a primis ante mi inceptos condimentum curabitur
                     curabitur eu sed nullam ridiculus nunc montes id nostra dui inceptos scelerisque posuere ipsum mus.
                     A scelerisque libero viverra eu condimentum mollis suscipit mi consectetur semper dis ipsum nisi
                     in nullam aliquet iaculis in eros euismod bibendum. Adipiscing volutpat fringilla bibendum duis a
@@ -172,10 +175,13 @@
 
     <div class="row">
         <div class="col-md-offset-6 col-md-4">
-            <button class="btn-success" th:text="#{button.buy.now}">Buy Now!!!</button>
+            <button class="btn-success" th:text="#{button.buy.now}">Buy Now!</button>
         </div>
     </div>
 </div>
-
+<div class="container" th:replace="fragments/footer :: footer">
+    <p>footer</p>
+</div>
 </body>
 </html>
+
