--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -145,8 +145,44 @@
             <h1 th:text="#{index.courses.headline}">Courses Headline</h1>
         </div>
     </div>
+    <table>
+        <tr>
+            <th>ID</th>
+            <th>Name</th>
+        </tr>
+        <tr th:each="product: ${products}">
+            <td th:text="${product.id}"></td>
+            <td th:text="${product.courseName}"></td>
 
+        </tr>
+    </table>
     <div class="row course-list list">
+        <div class='row course-list list'>
+            <div th:each="product,it : ${products}">
+                <div th:if="${it.count gt 0 and it.count lt 4}">
+                    <div th:replace="fragments/productdiv :: productdiv">
+
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+    <div class="row course-list list">
+        <div class='row course-list list'>
+            <div th:each="product,it : ${products}">
+                <div th:if="${it.count gt 3 and it.count lt 7}">
+                    <div th:replace="fragments/productdiv :: productdiv">
+
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+    <div class="row course-list list" th:remove="all">
         <div class="col-md-4">
             <div class="course-listing">
                 <div class="row">
@@ -263,7 +299,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row course-list list" th:remove="all">
         <div class="col-md-4">
             <div class="course-listing">
                 <div class="row">
@@ -384,4 +420,3 @@
 </div>
 
 </body>
-</html>
